# prototask

./: .gitignore  CMakeLists.txt  DelimetedMessagesStreamParser.cpp  DelimetedMessagesStreamParser.h  main.cpp  parseDelimited.cpp  read-test.cpp  serialize.cpp  vcpkg.json  write-test.cpp
protobuf/: work.pb.cc  work.pb.h  work.proto
src/: CMakeLists-hide.t  CMakeLists.txt  DelimetedMessagesStreamParser.hpp  DelimitedMessagesStreamParser.hpp  helpers.hpp  main.cpp  work.proto
test/: CMakeLists.txt  Test_DelimetedMessagesStreamParser.cpp  Test_DelimitedMessagesStreamParser.cpp  Test_helpers.cpp
